tests/neg/forwardCompat-leakingImplicit/Test_r3.0.scala
val canEq = summon[CanEqual[EmptyTuple, EmptyTuple]] // error
